<resources>
    <string name="app_name">云南微企平台</string>.
    <string name="logo">logo</string>
    <string name="user_img">user_img</string>
    <string name="user_name">用户名</string>
    <string name="password">password</string>
    <string name="input_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="yushen_title">预审</string>
    <string name="net_error">网络错误</string>
    <string name="menu_filter">筛选</string>
    <string name="serach_hint_yushen">请输入企业名称或者注册号</string>
    <string name="filter_type">按申请类型</string>
    <string name="filter_time">按申请时间</string>
    <string name="clear">清空</string>
    <string name="ok">确定</string>
    <string name="choose_time">选择时间</string>
    <string name="shenqing_start_time">申请开始时间</string>
    <string name="shenqing_end_time">申请结束时间</string>
    <string name="jb_result">经办结果：</string>
    <string name="jb_yijian">经办意见</string>
    <string name="jb_renyuan">经办人员</string>
    <string name="jb_jiguan">经办机关</string>
    <string name="jb_shijian">经办时间</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="query">查询</string>
    <string name="entName_input_hint">请输入企业名称或注册号</string>
    <string name="date_select_hint">请选择申请日期</string>
    <string name="type_select_hint">请选择申请类型</string>
    <string name="status_select_hint">请选择申请状态</string>
    <string name="version_check">版本检测</string>
    <string name="opin_feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="app_about">云南微型企业培育扶持工作信息平台</string>
    <string name="todo_alert_switch">获取待办提醒</string>
    <string name="jdcx_title">进度查询结果</string>
    <string name="wqcx_title">小微企业查询结果</string>
    <string name="fccx_title">扶持情况查询结果</string>
    <string name="app_clear">清空</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_submit">提交</string>
    <string name="app_setting">设置</string>
    <string name="app_home_navi_one">办理进度</string>
    <string name="app_home_navi_two">微企信息</string>
    <string name="app_home_navi_thr">扶持情况</string>
    <string name="app_date_sq_start">请选择申请开始日期</string>
    <string name="app_date_sq_end">请选择申请结束日期</string>
    <string name="app_only_current">只看本级</string>
    <string name="app_tj">统计</string>
</resources>
